Fix a few bugs in print mode, and clean whitespace errors
Most of the whitespace errors should be gone now, thanks to Geany,
and the print mode now works properly while zoomed in. Before it
wouldn't find more than two levels of child nodes for whatever
reason (I know the reason, of course: I did it wrong), but now it
will properly show all of the children of the current zoom level.

--- a/style/of-print.css
+++ b/style/of-print.css
@@ -3,7 +3,7 @@
    which can be found in full at http://www.gnu.org/licenses/gpl-2.0.txt
    It should also have been bundled with this software. */
 
-#of-login-form, #of-filter-menu, .hide-until-logged, .of-unit-zoom, .of-unit-show, #of-details-bar {
+#of-login-form, #of-filter-menu, .hide-until-logged, .of-unit-zoom, .of-unit-show, #of-details-bar, #of-resize-bar {
     display: none !important;
 }
 
